<resources>
    <string name="app_name">TugasApkAbsensi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    login-->
    <string name="welcome">selamat datang di</string>
    <string name="man2">man 2 school</string>
    <string name="nis">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>

    <!--    edt hint usr & pw-->
    <string name="user">username</string>
    <string name="pw">password</string>
    <!--    splass-->
    <string name="loading">Loading...</string>
    <string name="support">Support By</string>
    <string name="man2stb">man 2 situbondo</string>
    <string name="version_apk">1.0</string>

    <!--    navigation-->
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="profil">Profil Siswa</string>
    <string name="presensi">Presensi</string>
    <string name="mapel_presensi">Mapel Presensi</string>
    <string name="jadwal">Jadwal</string>
    <string name="info">info</string>
    <string name="log_out">Log Out</string>

    <!--    navigarion1_menu-->
    <string name="homeMenu">HOME</string>
    <string name="presensiMenu">PRESENSI</string>
    <string name="jadwalMenu">JADWAL</string>
    <string name="infoMenu">INFO</string>
    <string name="profilMenu">PROFIL</string>

    <!--    profil siswa-->
    <string name="nama_profil">Nama Siswa</string>
    <string name="NISN">Nisn</string>
    <string name="nisn">12345678900</string>
    <string name="no_hp">No Hp</string>
    <string name="nomer">084154215454</string>
    <string name="ttl">Bandung,3 Januari 2004</string>
    <string name="Alamat">Alamat</string>
    <string name="alamat">Jl.Kaliurang Timur Nomor 01</string>

    <!--    info-->
    <string name="laporanAbsen">Laporan Absen</string>
    <string name="kelas">Kelas XII-A</string>
    <string name="tanggalInfo">Friday,1 Juni 2021</string>
    <string name="tercatat">RECORDED</string>


    <!--    jadwal-->
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="jadwal_hari">senin</string>
    <string name="PAI">Pendidikan Agama Islam</string>
    <string name="B.INDO">Bahasa Indonesia</string>
    <string name="MTK">Matematika</string>


    <!--    proses present-->
    <string name="tanggal_proses_absesni">tanggal absen</string>
    <string name="jam_start_proses_absesni">start jam</string>
    <string name="slace"> - </string>
    <string name="jam_end_proses_absesni">end jam</string>
    <string name="info_proses_present"> Edit </string>

    <!-- default   prefens-->
    <string name="keperluan_token">tokenPrefens</string>


    <!--    user-->
    <string name="edt_img_user">Edit Img</string>
    <string name="edt_biodata_user">Edit Biodate</string>
    <string name="Log_out_user">Logout</string>
    <string name="profile_camera">Camera</string>
    <string name="profile_image">Image</string>
    <string name="hapus_foto">Hapus Foto</string>
    <string name="save_foto">save Foto</string>


    <!--    edit profil-->
    <string name="edit_nama_profil">Nama Siswa</string>
    <string name="edit_NISN">Nisn</string>
    <string name="edit_No_HP">Nomor Hp</string>
    <string name="edit_Alamat">Alamat</string>

    <!--    presensi-->
    <string name="edt_presensi">Presensi</string>
    <string name="edt_ijin">Ijin</string>
    <string name="messege_proses_present">Succes</string>
    <string name="confirm">Confirm</string>

    <!--    logout lottie-->
    <string name="messege_logout">apakah anda yakin akan keluar</string>
    <string name="yes_logout">Iya</string>
    <string name="no_logout">Tidak</string>

    <!--    login message-->
    <string name="ok_login_message">Ok</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>