<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/jadwalFramgment"
        android:icon="@drawable/ic_home"
        android:title="@string/homeMenu" />

    <item
        android:id="@+id/presnsiFragment"
        android:icon="@drawable/ic_clok"
        android:title="@string/presensiMenu" />

    <item
        android:id="@+id/jadwalFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/jadwalMenu" />

    <item
        android:id="@+id/infoFragment"
        android:icon="@drawable/ic_idea"
        android:title="@string/infoMenu" />

    <item
        android:id="@+id/profilFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/profilMenu" />
</menu>