<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/abu_abu"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_enableMergePathsForKitKatAndAbove="true"
                app:lottie_rawRes="@raw/lottie_student"
                app:lottie_speed="1.25"
                app:lottie_loop="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/messege_logout"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_logout_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/no_logout"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_logout_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:backgroundTint="@color/green_btn"
                    android:text="@string/yes_logout"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>