<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grade_user"
    tools:context=".fragment.EditProfileSiswaFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_siswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/rl_siswa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_siswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:background="@drawable/bg_circle_border">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_edit_siswa"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="3dp"
                android:src="@drawable/bg_user_siswa" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_edit_nama_siswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_siswa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/nama_profil"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_siswa1">

        <LinearLayout
            android:id="@+id/ln_cd_biodate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/NISN"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_edit_nisn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/edit_NISN"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/Ttl"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_edit_ttl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/edit_Ttl"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/Alamat"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_edit_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/edit_Alamat"
                    android:textColor="@color/black"
                    android:textSize="23sp" />


            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ln_cd_biodate"
            android:layout_centerInParent="true"
            android:backgroundTint="#C7BEA2"
            android:text="simpan"
            android:textColor="@color/black"
            android:layout_marginTop="20dp" />
    </RelativeLayout>


</RelativeLayout>